# DevSecOps

./: .gitignore  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: after-test-repo-auditor.yml  codeql.yml  on-issue-opened.yml  run-full-audit.yml  run-single-audit.yml  scorecard.yml  test-metrics.yml  test-repo-auditor.yml
common/: sample-dependencies-workflow.yml
docs/: PRD-repository-auditor.md  plan-prDurationAndManagerMetrics.prompt.md
dotnet/: README.md
edfi-repo-auditor/: .gitignore  CLAUDE.md  README.md  pyproject.toml  scoring.json
edfi-repo-auditor/edfi_repo_auditor/: __main__.py  auditor.py  checklist.py  config.py  disable_tls.py  github_client.py  html_report.py  pr_metrics.py
edfi-repo-auditor/tests/: test_config.py
edfi-repo-auditor/tests/auditor/: test_audit_actions.py  test_audit_alerts.py  test_get_repo_information.py  test_get_result.py  test_review_files.py
edfi-repo-auditor/tests/github_client/: test_dependabot_enabled.py  test_get_actions.py  test_get_dependabot_alert_count.py  test_get_file_content.py  test_get_merged_prs_with_reviews.py  test_get_pull_request_reviews.py  test_get_repositories.py  test_get_repository_information.py
edfi-repo-auditor/tests/pr_metrics/: test_get_pr_metrics.py  test_pr_review_cycle.py  test_reviewer_load_balance.py
javascript/: codeql.yml  test.yml
metrics/: .mypy.ini  Score Metric.ipynb  Ticket Metrics.ipynb  pyproject.toml
metrics/data/ossf-scores/: 2024-06-25.csv  2024-06-26.csv
metrics/docs/superpowers/specs/: 2026-05-15-unit-tests-design.md
metrics/edfi_tech_metrics/: backlog.py  disable_tls.py  improvements.py  jira.py  ossf_score.py  settings.py  ticket_age.py
metrics/tests/: test_improvements.py  test_ossf_score.py  test_settings.py
migration/: README.md  pyproject.toml
migration/migration/: __main__.py  conversion.py  jira_browser.py  settings.py  test.py
python/: codeql.yml  test.yml
(+1 files in other folders)
