[tool.poetry]
name = "edfi-repo-auditor"
version = "0.1.0"
description = "Ed-Fi Repository Auditor"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
repository = "https://github.com/Ed-Fi-Exchange-OSS/DevSecOps"

[tool.poetry.dependencies]
python = "^3.10"
ConfigArgParse = "^1.7.5"
python-dotenv = "^1.2.2"
errorhandler = "^2.0.1"
requests = "^2.33.1"
pandas = "^2.3.3"
coverage = "^7.13.5"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = "^7.3.0"
mypy = "^1.20.0"
pytest = "^9.0.2"
pytest-describe = "^3.1.0"
pytest-mock = "^3.15.1"
types-requests = "^2.33.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
