[tool.poetry]
name = "edfi-tech-metrics"
version = "0.1.0"
description = ""
authors = ["Ed-Fi Alliance"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jira = "^3.10.5"
jupyter = "^1.0.0"
python-dotenv = "^1.2.2"
configargparse = "^1.7"
pandas = ">=2.3.3,<4.0.0"
tzlocal = "^5.2"
termcolor = "^3.2.0"
plotnine = "^0.15.3"
ipywidgets = "^8.1.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.3.1"
mypy = "^1.20.0"
types-requests = "^2.33.0.20260327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
